# institutions-kort

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
tests/: test_foo.py
